deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lurus-www
  namespace: lurus-www
  labels:
    app: lurus-www
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: lurus-www
